--- a/src/app/home/sendusermoney/sendusermoney.page.html
+++ b/src/app/home/sendusermoney/sendusermoney.page.html
@@ -3,7 +3,7 @@
     <ion-button slot="start" fill="clear">
       <ion-back-button [defaultHref]="['home']"></ion-back-button>
     </ion-button>
-    <ion-title>sendusermoney</ion-title>
+    <ion-title>Envoyer de l'argent</ion-title>
   </ion-toolbar>
 </ion-header>
 
