--- a/src/app/home/payfacture/payfacture.page.html
+++ b/src/app/home/payfacture/payfacture.page.html
@@ -10,16 +10,16 @@
 <ion-content>
   <ion-grid class="ion-padding ion-text-center">
     <ion-row>
-      <ion-row>
-        <ion-col size-sm="6" offset-sm="3">
-          <div class="">
-            <ion-fab-button [routerLink]="['/','home','tabs','paycredit']">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </ion-fab-button>
-            <div class="titre-icon">Credit</div>
-          </div>
-        </ion-col>
-      </ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item lines="none" class="">
+          <ion-fab-button [routerLink]="['/','home','tabs','paycredit']">
+            <ion-icon name="phone-portrait-outline"></ion-icon>
+          </ion-fab-button>
+          <div class="titre-icon">Credit</div>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
         <div class="">
           <h4>Payer votre facture avec SamaKhaliss en toute sécurité</h4>
