--- a/src/app/home/sendusermoney/sendusermoney.page.html
+++ b/src/app/home/sendusermoney/sendusermoney.page.html
@@ -7,86 +7,70 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-text-center ion-padding">
-  <ion-grid>
-    <form [formGroup]="form">
+<ion-content class="ion-text-center">
+  <form (ngSubmit)="onValidedSubmit()" #f="ngForm">
+    <ion-grid>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
+            <!-- <ion-label position="floating">Montant</ion-label> -->
             <ion-input
-              label="Le nom"
               type="text"
-              labelPlacement="floating"
-              placeholder="NOM"
-              autocomplete
-              autocorrect
-              ngModel
-              formControlName="fullName"
+              [(ngModel)]="typeDepot"
+              placeholder="Nom du personne"
+              name="depot"
               required
             ></ion-input>
           </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size-sm="6" offset-sm="3">
           <ion-item>
+            <!-- <ion-label position="floating">Montant</ion-label> -->
             <ion-input
-              label="Numero de telephone"
-              type="tel"
-              labelPlacement="floating"
-              placeholder="numero"
-              formControlName="tel"
-              ngModel
-              required
-            ></ion-input>
-          </ion-item>
-        </ion-col>
-        <ion-row *ngIf="!form.get('tel').valid && form.get('tel').touched">
-          <ion-col size-sm="6" offset-sm="3">
-            <p>Le numéro de téléphone ne doit pas depasser 13 carracter</p>
-          </ion-col>
-        </ion-row>
-      </ion-row>
-      <ion-row>
-        <ion-col size-sm="6" offset-sm="3">
-          <ion-item>
-            <ion-input
-              label="Somme"
               type="number"
-              labelPlacement="floating"
-              placeholder="Somme"
-              formControlName="price"
+              ngModel
+              placeholder="Entrez le téléphone"
+              name="tel"
+              required
+            ></ion-input>
+          </ion-item>
+          <ion-item>
+            <!-- <ion-label position="floating">Montant</ion-label> -->
+            <ion-input
+              type="number"
+              ngModel
+              placeholder="Entrez le montant"
+              name="amount"
+              required
+            ></ion-input>
+          </ion-item>
+          <ion-item>
+            <!-- <ion-label position="floating">Montant</ion-label> -->
+            <ion-input
+              type="text"
+              [(ngModel)]="currentDate"
+              placeholder="date transaction"
+              name="newdate"
               required
             ></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
-      <ion-row class="ion-item-display-none">
-        <ion-col size-sm="6" offset-sm="3">
-          <ion-item class="noneprice">
-            <ion-label>
-              <ion-input
-                type="text"
-                name="currentDate"
-                formControlName="newDate"
-                [ngModel]="currentDate"
-                required
-              ></ion-input>
-            </ion-label>
-          </ion-item>
-        </ion-col>
-      </ion-row>
       <ion-row>
-        <ion-col size-sm="6" offset-sm="3">
-          <ion-button
-            color="primary"
-            expand="block"
-            (click)="onCreatePayment()"
-          >
-            Valider</ion-button
-          >
+        <ion-col size-sm="3" offset-sm="3">
+          <ion-row>
+            <ion-col>
+              <ion-button
+                aria-hidden="false"
+                (click)="onValidatedDepot()"
+                expand="block"
+                [disabled]="!this.form.valid"
+              >
+                <ion-icon slot="start" name="add-circle"></ion-icon>
+                valider
+              </ion-button>
+            </ion-col>
+          </ion-row>
         </ion-col>
       </ion-row>
-    </form>
-  </ion-grid>
+    </ion-grid>
+  </form>
 </ion-content>
