updated app paiments services

--- a/src/app/home/woyofal/woyofal.page.html
+++ b/src/app/home/woyofal/woyofal.page.html
@@ -43,7 +43,7 @@
               required
             ></ion-input>
           </ion-item>
-          <ion-item>
+          <ion-item class="hidden-date">
             <!-- <ion-label position="floating">Montant</ion-label> -->
             <ion-input
               type="text"
