--- a/src/app/home/depot/depot.page.html
+++ b/src/app/home/depot/depot.page.html
@@ -42,7 +42,7 @@
               required
             ></ion-input>
           </ion-item>
-          <ion-item>
+          <ion-item class="hidden-date">
             <!-- <ion-label position="floating">Montant</ion-label> -->
             <ion-input
               type="text"
