--- a/src/app/home/homeclient/homeclient.page.scss
+++ b/src/app/home/homeclient/homeclient.page.scss
@@ -53,3 +53,13 @@ ion-list.transactions {
 .btn-size {
   font-size: 0.57rem;
 }
+// transaction history
+.transactions {
+  border-top-left-radius: 15%;
+  border-top-right-radius: 15%;
+  font-size: 0.961rem;
+}
+.header-radius {
+  border-bottom-left-radius: 5%;
+  border-bottom-right-radius: 5%;
+}
