--- a/src/app/home/homeclient/homeclient.page.html
+++ b/src/app/home/homeclient/homeclient.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="tertiary">
+  <ion-toolbar color="tertiary" class="header-radius">
     <div class="center-header">
       <div class="">
         <ion-buttons slot="start">
@@ -40,11 +40,6 @@
         </h1>
       </ion-card-content>
     </ion-card>
-    <!-- <ion-card color="primary ion-text-center">
-      <ion-card-header>
-        <ion-card-title name="solde">0 FCFA</ion-card-title>
-      </ion-card-header>
-    </ion-card> -->
   </ion-toolbar>
 </ion-header>
 
@@ -98,10 +93,20 @@
         offset-sm="2"
         class="ion-padding ion-margin-top"
       >
-        <ion-list>
-          <!-- <ion-list-header color="primary" class="transactions ion-margin-top">
-            <ion-label>Transactions</ion-label>
-          </ion-list-header> -->
+        <ion-list class="ion-padding">
+          <ion-list-header color="primary" class="transactions ion-margin-top">
+            <ion-label>Historique des Transactions</ion-label>
+          </ion-list-header>
+          <ion-row
+            *ngIf=" loadHomePayments.length <= 0 "
+            class="ion-padding ion-text-center"
+          >
+            <ion-col size-sm="6" offset-sm="3">
+              <ion-label>
+                <p>Pas de transaction pour le moment</p>
+              </ion-label>
+            </ion-col>
+          </ion-row>
           <ion-item-group class="transactions ion-margin-top">
             <ion-item-sliding
               *ngFor="let payuser of loadHomePayments"
@@ -131,7 +136,7 @@
                   color="danger"
                   (click)="onDeletePay(payuser.id, slidingPay)"
                 >
-                  <ion-icon name="trash" slot="icon-only"></ion-icon>
+                  <ion-icon name="eye-off-outline"></ion-icon>
                 </ion-item-option>
               </ion-item-options>
             </ion-item-sliding>
